# ml-pipeline-titanic

./: .gitignore  COMMANDS.md  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  daily_batch.yml  verify_pipeline.yml
config/: config.yaml
experiments/: experiments_log.md  results.md
experiments/exp_001_baseline/: notebook.ipynb  notes.md
experiments/exp_002_imbalanced/: notebook.ipynb
experiments/exp_003_feature_engineering/: notebook.ipynb  notes.md
experiments/exp_004_model_selection/: notebook.ipynb  notes.md
experiments/exp_005_hyperparameter_tuning/: notebook.ipynb  notes.md
experiments/exp_006_model_finalisation/: notebook.ipynb  notes.md
models/: final_model.joblib  model_registry.json
models/batch_outputs/: drift_report.json  failed_rows.csv  predictions_20260409_034703.csv  predictions_20260411_033618.csv  predictions_20260413_041535.csv  predictions_20260414_035707.csv  predictions_20260415_035607.csv  predictions_20260416_041039.csv  predictions_20260417_035859.csv  predictions_20260418_034401.csv  predictions_20260419_041032.csv  predictions_20260420_041543.csv  predictions_20260421_035932.csv  predictions_20260422_035617.csv  predictions_20260423_040042.csv  predictions_20260424_041355.csv  predictions_20260425_034808.csv  predictions_20260426_041905.csv  predictions_20260427_042532.csv  predictions_20260428_042939.csv  (+88 more)
monitoring/: prometheus.yml
scripts/: batch_predict.sh  generate_sample_data.py  train.sh
tests/: test_integration.py  test_pipeline.py
(+8 files in other folders)
